# mini_onnx_runtime

./: .gitignore  CMakeLists.txt  input_7.txt  input_gemm.txt  input_squeezenet.txt  main  main.cpp
include/: debug_utils.h  engine.h  model_loader.h  op_factory.h  operator.h  simd_utils.h  tensor.h  timer.h
include/operators/: add.h  avgpool.h  batchnorm.h  concat.h  conv.h  dequantize_linear.h  flatten.h  gemm.h  global_avgpool.h  leakyrelu.h  maxpool.h  mul.h  quantize_linear.h  relu.cuh  relu.h  sigmoid.h  softmax.h  upsample.h
scripts/: create_onnx.py  test_single_image.py  test_voc.py
src/: debug_single.cpp  main.cpp  main_gui.cpp  voc_eval.cpp
src/operators/: avgpool.cu  batchnorm.cu  concat.cu  conv.cu  elementwise.cu  flatten.cu  gemm.cu  global_avgpool.cu  im2col.cu  leakyrelu.cu  maxpool.cu  quantize.cu  relu.cu  sigmoid.cu  softmax.cu  upsample.cu
tests/: full_gpu.txt  gpu+cpu.txt  test1.txt  test2(og).txt  test3.txt  test4.txt  test5(im2col).txt  test6(simd).txt  test7(multithreading).txt  test_cuda.cpp  test_cuda_gemm.cpp  test_tensor.cpp
